clusters/services1/hugo/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo-lablinks
  labels:
    app: hugo-lablinks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hugo-lablinks
  template:
    metadata:
      labels:
        app: hugo-lablinks
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: hugo-lablinks
        image:  harbor.lab.brianragazzi.com/library/lablinks:latest
        imagePullPolicy: Always
        # env:
        #   - name: HUGO_BASE_URL
        #     value: "https://lablinks.lab.ragazzilab.com:443"
        ports:
        - containerPort: 1313
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
      imagePullSecrets:
      - name: harbor
