clusters/services1/hugo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hugo-lablinks
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: lablinks.ragazzilab.com
  labels:
    app: hugo-lablinks
spec:
  type: LoadBalancer #ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: hugo
  selector:
    app: hugo-lablinks
